refactor: deprecate direct rt functions

--- a/examples/dashboard/webapp/index.html
+++ b/examples/dashboard/webapp/index.html
@@ -18,6 +18,7 @@
 			data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-compat-version="edge"
 			data-sap-ui-frame-options="trusted"
+			data-sap-ui-theme="sap_horizon"
 			data-sap-ui-async="true"
 		></script>
 	</head>
